[package]
name = "djs"
version = "0.3.0"
authors = ["Trever Shick <trevershick@gmail.com>"]

[dependencies]
clap = "2.29.0"
log = "0.3.8"
env_logger = "0.4.3"
reqwest = "0.8.2"
serde-xml-rs = "0.2.1"
serde_derive = "1.0.25"
serde = "1.0.25"
indicatif = "0.8.0"
console = "0.5.0"
configuration = "0.7.2"
url = "1.6.0"
strfmt = "0.1.5"

[dev-dependencies]
