[package]
name = "djs"
version = "0.5.0"
authors = ["Trever Shick <trevershick@gmail.com>"]

[dependencies]
clap = "2.31.2"
log = "0.4.3"
env_logger = "0.5.10"
reqwest = "0.8.6"
serde-xml-rs = "0.2.1"
serde_derive = "1.0.70"
serde = "1.0.70"
indicatif = "0.9.0"
console = ">=0.6.1, <1.0.0"
configuration = "0.7.2"
url = "1.7.1"
strfmt = "0.1.6"

[dev-dependencies]
